--- a/index.html
+++ b/index.html
@@ -1,97 +1,110 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>簡單計算機</title>
     <style>
         body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #2c3e50;
             font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
         }
         .calculator {
-            width: 260px;
-            margin: 50px auto;
+            width: 300px;
+            background: #ecf0f1;
             padding: 20px;
-            background: #2C3E50;
-            border-radius: 15px;
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            text-align: center;
         }
-        #display {
+        .display {
             width: 100%;
             height: 60px;
-            text-align: right;
-            font-size: 1.8em;
+            text-align: center;
+            font-size: 2em;
             margin-bottom: 15px;
             padding: 10px;
-            background: white;
             border: none;
-            border-radius: 10px;
+            border-radius: 5px;
+            background: #bdc3c7;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .buttons {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             gap: 10px;
         }
-        .buttons button {
-            width: 100%;
-            height: 60px;
+        button {
+            padding: 20px;
             font-size: 1.5em;
-            cursor: pointer;
             border: none;
-            border-radius: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.3s;
         }
-        .number {
-            background-color: #FFD700;
+        button:hover {
+            opacity: 0.8;
         }
-        .operator {
-            background-color: #DAA520;
+        button.operator {
+            background: #e67e22;
+            color: #fff;
         }
-        .equals {
-            background-color: #E6A23C;
+        button.equal {
+            background: #27ae60;
+            color: #fff;
             grid-column: span 4;
         }
-        .buttons button:hover {
-            opacity: 0.8;
+        button.clear {
+            background: #c0392b;
+            color: #fff;
+        }
+        button.number {
+            background: #95a5a6;
+            color: #fff;
         }
     </style>
 </head>
 <body>
     <div class="calculator">
-        <input type="text" id="display" disabled>
+        <div class="display" id="display"></div>
         <div class="buttons">
-            <button class="operator" onclick="clearDisplay()">C</button>
-            <button class="number" onclick="appendToDisplay('7')">7</button>
-            <button class="number" onclick="appendToDisplay('8')">8</button>
-            <button class="number" onclick="appendToDisplay('9')">9</button>
-            <button class="operator" onclick="appendToDisplay('+')">+</button>
-            <button class="number" onclick="appendToDisplay('4')">4</button>
-            <button class="number" onclick="appendToDisplay('5')">5</button>
-            <button class="number" onclick="appendToDisplay('6')">6</button>
-            <button class="operator" onclick="appendToDisplay('-')">-</button>
-            <button class="number" onclick="appendToDisplay('1')">1</button>
-            <button class="number" onclick="appendToDisplay('2')">2</button>
-            <button class="number" onclick="appendToDisplay('3')">3</button>
-            <button class="operator" onclick="appendToDisplay('*')">*</button>
-            <button class="number" onclick="appendToDisplay('0')">0</button>
-            <button class="number" onclick="appendToDisplay('.')">.</button>
-            <button class="operator" onclick="appendToDisplay('/')">/</button>
-            <button class="equals" onclick="calculateResult()">=</button>
+            <button onclick="appendToDisplay('/')" class="operator">÷</button>
+            <button onclick="appendToDisplay('7')" class="number">7</button>
+            <button onclick="appendToDisplay('8')" class="number">8</button>
+            <button onclick="appendToDisplay('9')" class="number">9</button>
+            <button onclick="appendToDisplay('+')" class="operator">+</button>
+            <button onclick="appendToDisplay('4')" class="number">4</button>
+            <button onclick="appendToDisplay('5')" class="number">5</button>
+            <button onclick="appendToDisplay('6')" class="number">6</button>
+            <button onclick="appendToDisplay('-')" class="operator">-</button>
+            <button onclick="appendToDisplay('1')" class="number">1</button>
+            <button onclick="appendToDisplay('2')" class="number">2</button>
+            <button onclick="appendToDisplay('3')" class="number">3</button>
+            <button onclick="appendToDisplay('*')" class="operator">×</button>
+            <button onclick="appendToDisplay('0')" class="number">0</button>
+            <button onclick="appendToDisplay('.')" class="number">.</button>
+            <button onclick="clearDisplay()" class="clear">C</button>
+            <button onclick="calculateResult()" class="equal">=</button>
         </div>
     </div>
     <script>
         function appendToDisplay(value) {
-            document.getElementById('display').value += value;
+            document.getElementById("display").innerText += value;
         }
         function clearDisplay() {
-            document.getElementById('display').value = '';
+            document.getElementById("display").innerText = "";
         }
         function calculateResult() {
             try {
-                document.getElementById('display').value = eval(document.getElementById('display').value);
-            } catch {
-                document.getElementById('display').value = '錯誤';
+                document.getElementById("display").innerText = eval(document.getElementById("display").innerText);
+            } catch (error) {
+                alert("無效的運算式");
             }
         }
     </script>
